@@ -1,13 +1,12 @@
 Source: libcdatetime
-Section: unknown
+Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
-Standards-Version: 3.8.3
+Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libcdatetime/
 
 Package: libcdatetime
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libcdatetime-dbg
@@ -17,14 +16,14 @@ Description: Library to support cross-platform C date and time functions
 Package: libcdatetime-dbg
 Architecture: any
 Section: debug
-Depends: libcdatetime (= ${Source-Version}), ${misc:Depends}
+Depends: libcdatetime (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libcdatetime
  Debugging symbols for libcdatetime.
 
 Package: libcdatetime-dev
 Section: libdevel
 Architecture: any
-Depends: libcdatetime (= ${Source-Version})
+Depends: libcdatetime (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libcdatetime
  Header files and libraries for developing applications for libcdatetime.
 
